Align donate block (fix #48) (#67)

--- a/resources/assets/styles/_random.css
+++ b/resources/assets/styles/_random.css
@@ -9,3 +9,9 @@
 .wp-block-group.donate h2 {
   color: inherit;
 }
+
+@media (--breakpoint-lg) {
+  .wp-block-group.donate {
+    text-align: center;
+  }
+}
